--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "babylon": "^6.0.0",
     "babel-generator": "^6.0.0",
+    "babel-polyfill": "^6.0.0",
     "cheerio": "^0.20.0",
     "color-logger": "^0.0.6",
     "escape-html": "^1.0.0",
